--- a/exercicios/ex002/style.css
+++ b/exercicios/ex002/style.css
@@ -27,4 +27,16 @@ main{
 }
 main p{
     margin: 15px;
+    align-self: flex-start;
+}
+#resultado{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#foto{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    display: none;
 }
